--- a/index.html
+++ b/index.html
@@ -1,26 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Assingment number one</title>
     <link rel="stylesheet" href="./css-file/style.css">
+    <!-- font-awosome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <!-- banner-section -->
         <section class="banner-area">
             <div class="banner-content">
                 <h1>All Thinks Are Possible If You believe</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words</p>
                 <div class="button">
                     <a href="#" class="btn-primary">Contact Us</a>
                 </div>
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- failures-area -->
+        <section class="failures-area">
+            <div class="failures-content">
+                <div class="image">
+                    <img src="./images/person.png" alt="">
+                </div>
+                <div class="failures-reason">
+                    <h2>My failures of previous year</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <div class="list">
+                        <ul>
+                            <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                            <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                            <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                            <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                            <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- planing-area -->
+        <section class="planing-area">
+            <div class="title">
+                <h2>My Plans</h2>
+            </div>
+            <div class="planing-content">
+                <div class="planing-subject">
+                    <img src="./images/icons/web.png" alt="">
+                    <h2>Web Development</h2>
+                    <p>I want to start</p>
+                </div>
+                <div class="planing-subject">
+                    <img src="./images/icons/js.png" alt="">
+                    <h2>Javascript</h2>
+                    <p>I want to learn</p>
+                </div>
+                <div class="planing-subject">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>I want to end</p>
+                </div>
+                <div class="planing-subject">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h2>ecommerce</h2>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- gardient-area -->
+        
+
+    </main>
     <footer></footer>
 </body>
+
 </html>
