--- a/index.html
+++ b/index.html
@@ -56,31 +56,76 @@
             <div class="planing-content">
                 <div class="planing-subject">
                     <img src="./images/icons/web.png" alt="">
-                    <h2>Web Development</h2>
+                    <h3>Web Development</h2>
                     <p>I want to start</p>
                 </div>
                 <div class="planing-subject">
                     <img src="./images/icons/js.png" alt="">
-                    <h2>Javascript</h2>
+                    <h3>Javascript</h2>
                     <p>I want to learn</p>
                 </div>
                 <div class="planing-subject">
                     <img src="./images/icons/smoke.png" alt="">
-                    <h2>Smoking Habit</h2>
+                    <h3>Smoking Habit</h2>
                     <p>I want to end</p>
                 </div>
                 <div class="planing-subject">
                     <img src="./images/icons/ecom.png" alt="">
-                    <h2>ecommerce</h2>
+                    <h3>ecommerce</h2>
                     <p>I want to develop</p>
                 </div>
             </div>
         </section>
         <!-- gardient-area -->
-        
+        <section class="gardient-area">
+            <div class="gardient-banner">
+                <div class="contant">
+                    <h1>Awlays keep a positive mindset</h1>
+                    <div class="button">
+                        <a href="#" class="btn-primary">Call Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <!-- footer-area -->
+        <section class="footer-area">
+            <div class="footer-contant">
+                <div class="future">
+                    <div class="title-info">
+                        <h1>Future</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    </div>
+                    <div class="info">
+                        <div class="contact">
+                            <p>Email : info@gmail.com</p>
+                            <p>Phone : 01500 00 00 00</p>
+                        </div>
+                        <div class="icon">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="subscribe-from">
+                    <div class="title">
+                        <h3>Subscribe</h3>
+                    </div>
+                    <form action="#">
+                        <input type="email" name="email" id="eamil" placeholder="enter your email">
+                    </form>
+                    <div class="button">
+                        <a href="#" class="btn-primary">Subscribe</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
